--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <title></title>
 </head>
 <body>
   <h1>Awesome Books</h1>
@@ -13,10 +14,10 @@
   </div>
 
   <div class="add-section">
-    <input type="text" placeholder="Author"><br>
-    <input type="text" placeholder="Title"><br>
+    <input class="author" type="text" placeholder="Author"><br>
+    <input class="title" type="text" placeholder="Title"><br>
     <input type="button" name="button" id="add-button" value="Add">
   </div>
-  <link rel="stylesheet" href="script.js">
+ <script src="script.js"></script>
 </body>
 </html>
