--- a/index.html
+++ b/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Awesome Books</title>
-    <link href="./style.css" rel="stylesheet" />
-  </head>
 
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Awesome Books</title>
+  <link href="./style.css" rel="stylesheet" />
+</head>
+
+
+<body>
   
-    <main>
-        <h1 class="heading">Awesome Books</h1>
-        <body>
-            <div class="menu">
-              <div class="menu-awesome">Awesome Books</div>
-              <div class="menu-list">List</div>
-              <div class="menu-add">Add new</div>
-              <div class="menu-contact">Contact</div>
-            </div>
 
-            <h2>All owesome books</h2>
-      <div class="list-display">
-      <ul id="Result"></ul></div>
-      
+  <main>
+    <h1 class="heading">Awesome Books</h1>
+    <div class="menu">
+      <div class="menu-awesome">Awesome Books</div>
+      <div class="menu-list">List</div>
+      <div class="menu-add">Add new</div>
+      <div onclick="colorblue()" class="menu-contact">Contact</div>
+    </div>
+
+    <h2 class="all-a-books">All owesome books</h2>
+    <div class="list-display">
+      <ul id="Result"></ul>
+    </div>
+
     <div class="form d-none">
-        <p class="heading1">Add a new book</p>
+      <p class="heading1">Add a new book</p>
       <form id="booksForm">
         <input type="text" id="bookTitle" placeholder="Book's title" />
         <input type="text" id="bookAuthor" placeholder="Book's author" />
@@ -32,17 +36,18 @@
       </form>
     </div>
     <div class="contact d-none">
-        <h2>Contact Information</h2>
-        <p>Do have question or you just want to say "Hello"?
-            <br> You can reach aout us!
-        </p>
-        <ul>
-            <li>Our email</li>
-            <li>Our email</li>
-            <li>Our email</li>
-        </ul>
+      <h2>Contact Information</h2>
+      <p>Do have question or you just want to say "Hello"?
+        <br> You can reach aout us!
+      </p>
+      <ul>
+        <li>Our email</li>
+        <li>Our email</li>
+        <li>Our email</li>
+      </ul>
     </div>
-    </main>
-    <script src="./script.js"></script>
-  </body>
+  </main>
+<script src="./script.js"></script>
+</body>
+
 </html>
