Add css selectors

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <body>
-  
+
 
   <main>
     <h1 class="heading">Awesome Books</h1>
@@ -19,7 +19,7 @@
       <div class="menu-awesome">Awesome Books</div>
       <div class="menu-list">List</div>
       <div class="menu-add">Add new</div>
-      <div onclick="colorblue()" class="menu-contact">Contact</div>
+      <div class="menu-contact">Contact</div>
     </div>
 
     <h2 class="all-a-books">All owesome books</h2>
@@ -28,7 +28,7 @@
     </div>
 
     <div class="form d-none">
-      <p class="heading1">Add a new book</p>
+      <h2 class="heading1">Add a new book</h2>
       <form id="booksForm">
         <input type="text" id="bookTitle" placeholder="Book's title" />
         <input type="text" id="bookAuthor" placeholder="Book's author" />
@@ -40,10 +40,10 @@
       <p>Do have question or you just want to say "Hello"?
         <br> You can reach aout us!
       </p>
-      <ul>
-        <li>Our email</li>
-        <li>Our email</li>
-        <li>Our email</li>
+      <ul class="infos">
+        <li>Our email: email@email.com</li>
+        <li>Our Github: http//:www.github.com/account/</li>
+        <li>Our phone number: 000 123456 789</li>
       </ul>
     </div>
   </main>
