Add date and time

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Awesome Books</title>
+	<script src="https://cdn.jsdelivr.net/npm/luxon@2.0.2/build/global/luxon.min.js" defer></script>
   <link href="./style.css" rel="stylesheet" />
 </head>
 
@@ -23,7 +24,6 @@
     </div>
 
 		<div class="date-container">
-        <p id="date"></p>
     </div>
 
     <h2 class="all-a-books">All owesome books</h2>
@@ -52,8 +52,6 @@
     </div>
   </main>
 <script src="./script.js"></script>
-<script src=".luxon.js">
-
 </script>
 </body>
 
