--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <div class="contact d-none">
       <h2>Contact Information</h2>
-      <p>Do have question or you just want to say "Hello"?
+      <p class="textt">Do have question or you just want to say "Hello"?
         <br> You can reach aout us!
       </p>
       <ul class="infos">
